--- a/dinput8.vcxproj
+++ b/dinput8.vcxproj
@@ -105,7 +105,7 @@
       <ModuleDefinitionFile>dinput8.def</ModuleDefinitionFile>
     </Link>
     <PostBuildEvent>
-      <Command>copy "C:\Users\ykzmd\OneDrive\Desktop\fc3tweaks\Debug\dinput8.dll" "C:\Games\Steam\steamapps\common\Far Cry 3\bin"</Command>
+      <Command>copy "$(TargetDir)dinput8.dll" "C:\Games\Steam\steamapps\common\Far Cry 3\bin"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -149,7 +149,7 @@
       <ModuleDefinitionFile>dinput8.def</ModuleDefinitionFile>
     </Link>
     <PostBuildEvent>
-      <Command>copy "C:\Users\ykzmd\OneDrive\Desktop\fc3tweaks\Release\dinput8.dll" "C:\Games\Steam\steamapps\common\Far Cry 3\bin"</Command>
+      <Command>copy "$(TargetDir)dinput8.dll" "C:\Games\Steam\steamapps\common\Far Cry 3\bin"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
