--- a/dinput8.vcxproj.filters
+++ b/dinput8.vcxproj.filters
@@ -14,6 +14,7 @@
     <ClInclude Include="ModUtils\Patterns.h">
       <Filter>ModUtils</Filter>
     </ClInclude>
+    <ClInclude Include="calls.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="dinput8.def" />
